# strongswan

./: .gitignore  PACE  configure.in
src/libcharon/: Makefile.am  daemon.c  daemon.h
src/libcharon/encoding/: message.c
src/libcharon/encoding/payloads/: gspm_payload.c  gspm_payload.h  notify_payload.c  notify_payload.h  payload.c
src/libcharon/plugins/gspm_pace/: Makefile.am  gspm_pace.c  gspm_pace.h  gspm_pace_listener.c  gspm_pace_listener.h  gspm_pace_plugin.c  gspm_pace_plugin.h
src/libcharon/plugins/stroke/: stroke_config.c
src/libcharon/sa/: authenticator.c  authenticator.h
src/libcharon/sa/ikev2/authenticators/: gspm_authenticator.c  gspm_authenticator.h
src/libcharon/sa/ikev2/gspm/: gspm_manager.c  gspm_manager.h  gspm_member.c  gspm_member.h  gspm_method.c  gspm_method.h
src/libcharon/sa/ikev2/tasks/: child_create.c  ike_auth.c  ike_init.c
src/libstrongswan/credentials/: auth_cfg.c  auth_cfg.h
src/starter/: args.c  starterstroke.c
